# swedish-car-mcp

./: .gitignore  .goreleaser.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh
.github/workflows/: go-test.yml  release.yml
aviloo-mcp/: README.md  pyproject.toml
aviloo-mcp/src/aviloo_mcp/: parser.py  repo.py  server.py
aviloo-mcp/tests/: test_parser.py
bilmarknad-mcp/: README.md  pyproject.toml
bilmarknad-mcp/src/bilmarknad_mcp/: blocket.py  blocket_proxy.py  carla.py  kvd.py  riddermark.py  schema.py  search.py  server.py  soh.py  tradera.py  urls.py  wayke.py
bilmarknad-mcp/tests/: test_blocket.py  test_carla.py  test_dealers.py  test_riddermark.py  test_soh.py  test_tradera.py
cmd/aviloo-mcp/: main.go
cmd/bilmarknad-mcp/: main.go
internal/aviloo/cert/: hunt.go
internal/aviloo/parser/: cert.go  cert_test.go  parser.go  parser_test.go
internal/aviloo/repo/: find.go  repo.go
internal/aviloo/server/: server.go
internal/bilmarknad/ayvens/: ayvens.go  ayvens_test.go  bus.go  bus_internal_test.go  bus_live_test.go  bus_test.go
internal/bilmarknad/blocket/: blocket.go  blocket_test.go
internal/bilmarknad/blocketproxy/: blocketproxy.go
internal/bilmarknad/bus/: bus.go  bus_test.go
internal/bilmarknad/carla/: carla.go  carla_test.go
internal/bilmarknad/dealers/: dealers_test.go  scrape.go
internal/bilmarknad/httputil/: client.go  retry.go  retry_test.go
internal/bilmarknad/kvd/: kvd.go
internal/bilmarknad/presets/: presets.go  presets_test.go
internal/bilmarknad/riddermark/: riddermark.go  riddermark_test.go
internal/bilmarknad/schema/: listing.go  plate.go  plate_test.go
internal/bilmarknad/search/: batch.go  search.go  search_rate_limit_test.go
internal/bilmarknad/server/: server.go
internal/bilmarknad/soh/: soh.go  soh_test.go
internal/bilmarknad/tradera/: tradera.go  tradera_test.go
internal/bilmarknad/urls/: urls.go  urls_test.go
internal/bilmarknad/wayke/: plate.go  scrape.go  wayke.go  wayke_test.go
internal/mcpjson/: result.go
scripts/: aviloo-mcp  bilmarknad-mcp  install.sh
scripts/lib/: common.sh
