[project]
name = "aviloo-mcp"
version = "0.1.0"
description = "MCP server to parse AVILOO battery certificate PDFs in a project repository"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "flyhard" }]
keywords = ["mcp", "aviloo", "ev", "battery", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.6",
    "pypdf>=5.0",
]

[project.urls]
Homepage = "https://github.com/flyhard/swedish-car-mcp"
Repository = "https://github.com/flyhard/swedish-car-mcp"
Issues = "https://github.com/flyhard/swedish-car-mcp/issues"

[project.scripts]
aviloo-mcp = "aviloo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/aviloo_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true
